--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,182 +1,182 @@
-.rhljst *{
-  .fixed{
+.rhljst {
+  .fixed {
     position: fixed
   }
-  .sticky{
+  .sticky {
     position: sticky
   }
-  .left-0{
+  .left-0 {
     left: 0px
   }
-  .top-0{
+  .top-0 {
     top: 0px
   }
-  .z-\[999\]{
+  .z-\[999\] {
     z-index: 999
   }
-  .ml-2{
+  .ml-2 {
     margin-left: 0.5rem
   }
-  .mr-4{
+  .mr-4 {
     margin-right: 1rem
   }
-  .inline{
+  .inline {
     display: inline
   }
-  .flex{
+  .flex {
     display: flex
   }
-  .inline-flex{
+  .inline-flex {
     display: inline-flex
   }
-  .h-full{
+  .h-full {
     height: 100%
   }
-  .w-\[10rem\]{
+  .w-\[10rem\] {
     width: 10rem
   }
-  .w-\[3px\]{
+  .w-\[3px\] {
     width: 3px
   }
-  .w-full{
+  .w-full {
     width: 100%
   }
-  .flex-1{
+  .flex-1 {
     flex: 1 1 0%
   }
-  .cursor-pointer{
+  .cursor-pointer {
     cursor: pointer
   }
-  .select-none{
+  .select-none {
     -webkit-user-select: none;
        -moz-user-select: none;
             user-select: none
   }
-  .flex-col{
+  .flex-col {
     flex-direction: column
   }
-  .items-center{
+  .items-center {
     align-items: center
   }
-  .justify-center{
+  .justify-center {
     justify-content: center
   }
-  .justify-between{
+  .justify-between {
     justify-content: space-between
   }
-  .gap-2{
+  .gap-2 {
     gap: 0.5rem
   }
-  .gap-3{
+  .gap-3 {
     gap: 0.75rem
   }
-  .gap-4{
+  .gap-4 {
     gap: 1rem
   }
-  .overflow-auto{
+  .overflow-auto {
     overflow: auto
   }
-  .whitespace-pre{
+  .whitespace-pre {
     white-space: pre
   }
-  .rounded-md{
+  .rounded-md {
     border-radius: 0.375rem
   }
-  .border{
+  .border {
     border-width: 1px
   }
-  .border-b{
+  .border-b {
     border-bottom-width: 1px
   }
-  .border-gray-400{
+  .border-gray-400 {
     --tw-border-opacity: 1;
     border-color: rgb(156 163 175 / var(--tw-border-opacity))
   }
-  .border-gray-500{
+  .border-gray-500 {
     --tw-border-opacity: 1;
     border-color: rgb(107 114 128 / var(--tw-border-opacity))
   }
-  .border-transparent{
+  .border-transparent {
     border-color: transparent
   }
-  .bg-\[\#333\]{
+  .bg-\[\#333\] {
     --tw-bg-opacity: 1;
     background-color: rgb(51 51 51 / var(--tw-bg-opacity))
   }
-  .bg-\[\#eee\]{
+  .bg-\[\#eee\] {
     --tw-bg-opacity: 1;
     background-color: rgb(238 238 238 / var(--tw-bg-opacity))
   }
-  .bg-transparent{
+  .bg-transparent {
     background-color: transparent
   }
-  .p-2{
+  .p-2 {
     padding: 0.5rem
   }
-  .px-2{
+  .px-2 {
     padding-left: 0.5rem;
     padding-right: 0.5rem
   }
-  .py-0{
+  .py-0 {
     padding-top: 0px;
     padding-bottom: 0px
   }
-  .py-0\.5{
+  .py-0\.5 {
     padding-top: 0.125rem;
     padding-bottom: 0.125rem
   }
-  .pb-3{
+  .pb-3 {
     padding-bottom: 0.75rem
   }
-  .pb-8{
+  .pb-8 {
     padding-bottom: 2rem
   }
-  .text-sm{
+  .text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem
   }
-  .text-xl{
+  .text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem
   }
-  .font-bold{
+  .font-bold {
     font-weight: 700
   }
-  .font-medium{
+  .font-medium {
     font-weight: 500
   }
-  .text-gray-200{
+  .text-gray-200 {
     --tw-text-opacity: 1;
     color: rgb(229 231 235 / var(--tw-text-opacity))
   }
-  .text-gray-600{
+  .text-gray-600 {
     --tw-text-opacity: 1;
     color: rgb(75 85 99 / var(--tw-text-opacity))
   }
-  .opacity-40{
+  .opacity-40 {
     opacity: 0.4
   }
-  .filter{
+  .filter {
     filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow)
   }
-  .transition-all{
+  .transition-all {
     transition-property: all;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-duration: 150ms
   }
 }
 
-.hover\:bg-\[\#333\]:hover{
+.hover\:bg-\[\#333\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(51 51 51 / var(--tw-bg-opacity))
 }
 
-.hover\:bg-\[\#eee\]:hover{
+.hover\:bg-\[\#eee\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(238 238 238 / var(--tw-bg-opacity))
 }
 
-.active\:translate-y-\[1px\]:active{
+.active\:translate-y-\[1px\]:active {
   --tw-translate-y: 1px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y))
 }
